# honfoglalo_classic_server

./: .gitignore  Cargo.toml  README.md  config.toml  index.html  rustfmt.toml  shell.nix  todo.md
.github/workflows/: rust.yml
.sqlx/: query-17d39df5e5ead686a65b9598fc99103a135082395f3e080f9740c17cb6ee2717.json  query-3aab7db68bf78598e679e7a38031e3b5676a787af2d611bbd3b9099eb3385c28.json
.zed/: debug.json  tasks.json
docs/: Game phases.md  Game rules.md  SEMU.md
docs/.obsidian/: workspace.json
migrations/: 20250916125351_initial_database.down.sql  20250916125351_initial_database.up.sql  20250916125555_add_users.up.sql
src/: api.rs  app.rs  channels.rs  emulator.rs  game_handler.rs  game_handlers.rs  login_screen.rs  main.rs  menu.rs  mobile.rs  players.rs  request_structs.rs  response_structs.rs  router.rs  sside.rs  triviador.rs  users.rs  utils.rs  village.rs
src/cdn/: countries.rs
src/cdn/countries/: hungary.rs
src/channels/: command.rs  heartbeat.rs  listen.rs
src/constant_setup/: countries.rs
src/constant_setup/countries/: response.rs
src/constant_setup/countries/hungary/: flags.rs
src/game/: request.rs  response.rs
src/game_handler/: area_handler.rs  base_handler.rs  question_handler.rs  server_game_handler.rs  sgame.rs
src/game_handlers/: area_conquer_handler.rs  area_handler.rs  base_handler.rs  battle_handler.rs  endscreen_handler.rs  fill_remaining_handler.rs  question_handler.rs  s_game.rs  server_game_handler.rs
src/login_screen/: request.rs  response.rs
src/menu/: friend_list.rs  help.rs
src/menu/friend_list/: friends.rs
src/menu/help/: info_help.rs
src/triviador/: areas.rs  available_area.rs  bases.rs  cmd.rs  county.rs  fill_round.rs  game.rs  game_player_data.rs  game_state.rs  player_info.rs  player_points.rs  question.rs  round_info.rs  selection.rs  shield_mission.rs  triviador_state.rs  war_order.rs
src/village/: castle.rs  setup.rs  start.rs  start_game.rs  stuff.rs  waithall.rs
src/village/castle/: badges.rs  response.rs
src/village/start/: friendly_game.rs
src/village/waithall/: response.rs
