[package]
name = "honfoglalo_classic_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "query"] }
anyhow = "1.0.86"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.5.0"
serde_with = "3.9.0"
quick-xml = { version = "0.36.1", features = ["serialize"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
async-trait = "0.1.80"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio"] }
fred = { version = "9.1.2", features = ["full-tracing"] }
dotenvy = "0.15.7"
hex = "0.4.3"
fastrand = "2.1.1"
futures = "0.3.30"
#todo check performance
rand = "0.8"

[dev-dependencies]
serde_test = "1"

[profile.dev.package.backtrace]
opt-level = 3

[lints.clippy]
large_enum_variant = "allow"
