[package]
name = "honfoglalo_classic_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "query"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-aux = "4.5.0"
serde_with = "3.11"
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal"] }
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
fred = { version = "9.4", features = ["full-tracing", "mocks"] }
dotenvy = "0.15"
hex = "0.4.3"
fastrand = "2.1.1"
futures = "0.3"
#todo check performance
rand = "0.8"

[dev-dependencies]
serde_test = "1"

[profile.dev.package.backtrace]
opt-level = 3

[lints.clippy]
large_enum_variant = "allow"
