[package]
name = "honfoglalo_classic_server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
axum = { version = "0.7", features = ["macros", "query"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-aux = "4.5.0"
serde_with = "3.11"
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-stream = "0.1"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
dotenvy = "0.15"
hex = "0.4.3"
futures = "0.3"
#todo check performance
rand = "0.8"
scc = { version = "2.2.5", features = ["serde"] }
http-body-util = "0.1.2"
flume = { version = "0.11.1", features = ["async"] }
pretty_assertions = "1.4.1"
tower-http = { version = "0.6", features = ["fs", "cors"] }

[dev-dependencies]
serde_test = "1"

[profile.dev.package.backtrace]
opt-level = 3

[lints.clippy]
large_enum_variant = "allow"
